<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/course_block_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/head_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/sliderCardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:elevation="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"

            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <!--
                   slideranimation duration is to set duration for transition between two slides
                   sliderautocycledirection is to set animationbetween transition of your slides
                   sliderindicator enables is used to display the indicators for slider
                   slider indicator gravity is to set gravity for indicator gravity
                   slider indicator margin is to set margin for indicator
                   slider indicator orientation is used to add orientation for slider
                   slider indicator padding is use to add padding to indicator
                   slider indicator selected color is use to specify selected color
                   and slider indicator unselected color is use to specify the color when
                   the slider is unselected
                    slider scroll time in sec is used to specify scrolling time in seconds
                -->
                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/slider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorEnabled="true"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/usersCountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/sliderCardView"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users_count_text"
                android:textSize="@dimen/text_10sp"
                />

            <TextView
                android:id="@+id/clientsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/text_10sp"
                android:paddingLeft="@dimen/size_5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_registration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size_5dp"
            app:layout_constraintTop_toBottomOf="@+id/usersCountLayout"
            >
            <TextView
                android:id="@+id/sendToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="@dimen/text_13sp"
                android:textColor="@color/course_block_color"
                android:gravity="start"
                android:layout_marginStart="@dimen/size_25dp"
                />

            <TextView
                android:id="@+id/sendToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/text_13sp"
                android:textColor="@color/course_block_color"
                android:gravity="end"
                android:layout_marginEnd="@dimen/size_25dp"
                />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carCategoriesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_registration_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>