<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/size_20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/size_20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/size_80dp"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="@dimen/size_10dp"
                />
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/title_blue"
                    android:layout_marginTop="3dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/size_80dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="@dimen/size_10dp"
                />
            <EditText
                android:id="@+id/editPhone"
                android:layout_width="@dimen/size_180dp"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingTop="0dp"
                android:textSize="@dimen/text_13sp"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                >
                <ImageView
                    android:id="@+id/editPhoneBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/title_blue"
                    android:layout_marginTop="3dp"
                    />

                <LinearLayout
                    android:id="@+id/savePhoneLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/savePhoneBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_check"
                        app:tint="@color/title_blue"
                        android:layout_marginTop="3dp"
                        />

                    <ImageView
                        android:id="@+id/cancelPhoneBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_remove"
                        app:tint="@color/red"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/size_80dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="add jomin 33"
                android:paddingLeft="@dimen/size_10dp"
                />
            <EditText
                android:id="@+id/editAddress"
                android:layout_width="@dimen/size_180dp"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingTop="0dp"
                android:textSize="@dimen/text_13sp"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                >
                <ImageView
                    android:id="@+id/editAddressBtn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/title_blue"
                    android:layout_marginTop="3dp"
                    />

                <LinearLayout
                    android:id="@+id/saveAddressLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/saveAddressBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_check"
                        app:tint="@color/title_blue"
                        android:layout_marginTop="3dp"
                        />

                    <ImageView
                        android:id="@+id/cancelAddressBtn"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_remove"
                        app:tint="@color/red"
                        android:layout_marginTop="3dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/size_60dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="left"
                />

            <LinearLayout
                android:id ="@+id/linearLayoutForButtons"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_30dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <RadioGroup
                    android:id="@+id/langGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                   >
                    <RadioButton
                        android:id="@+id/langLatin"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@drawable/lang_lat_selector"
                        android:button="@android:color/transparent"
                        android:checked="true"
                        android:text="Lotincha"
                        android:textColor="@color/lang_text_color_selector" />
                    <RadioButton
                        android:id="@+id/langCyrill"
                        android:gravity="center"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/lang_cyr_selector"
                        android:button="@android:color/transparent"
                        android:text="Кирилча"
                        android:textColor="@color/lang_text_color_selector" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_24dp"
                android:layout_marginTop="@dimen/size_25dp"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:drawableLeft="@drawable/ic_logout"
                android:drawablePadding="@dimen/size_5dp"
                />
        </LinearLayout>



    </LinearLayout>

</FrameLayout>